@@ -1,3 +1,10 @@
+2011-10-18  Gustavo Noronha Silva  <gns@gnome.org>
+
+        Fix distcheck.
+
+        * GNUmakefile.am: create po directory when it's not there yet both
+        when updating the pot and the po files.
+
 2011-09-26  Alejandro G. Castro  <alex@igalia.com>
 
         [GTK] pot file is not properly remove during distcheck
